Fixed footer height issue, spacing

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,46 +1,51 @@
 html,
 body {
-   margin:0;
-   padding:0;
-   height:100%;
+  margin: 0;
+  padding: 0;
+  height: 100%;
 }
+
 #container {
-   min-height:100%;
-   position:relative;
+  min-height: 100%;
+  position: relative;
 }
+
 .centerBlock {
   display: table;
   margin: auto;
 }
 
-.forcedWidth{
-    width:200px;
-    word-wrap:break-word;
-    display:inline-block;
+.forcedWidth {
+  width: 200px;
+  word-wrap: break-word;
+  display: inline-block;
 }
-
 
 #header {
-   padding:10px;
-}
-#body {
-   padding:10px;
-   padding-bottom:30px;   /* Height of the footer */
-}
-#footer {
-  position:static;
-  clear:both;
-   bottom:0;
-   width:100%;
-   height:30px;   /* Height of the footer */
-   background:#454545;
-   text-align: center;
-   color: #999999;
+  padding: 10px;
 }
 
-.pt-4,.py-4{
-  padding-top:0rem !important;
+#body {
+  padding: 10px;
+  padding-bottom: 30px;
+  /* Height of the footer */
 }
+
+#footer {
+  position: static;
+  clear: both;
+  bottom: 0;
+  width: 100%;
+  /* Height of the footer */
+  background: #454545;
+  text-align: center;
+  color: #999999;
+}
+
+.pt-4, .py-4 {
+  padding-top: 0rem !important;
+}
+
 .business-header {
   height: 50vh;
   min-height: 300px;
